--- a/css/style.css
+++ b/css/style.css
@@ -36,9 +36,7 @@ img#logo{
 }
 
 /*MAIN*/
-
 /*SLIDER*/
-
 main > div#carouselExampleIndicators, main > div#carouselExampleIndicators img{
     height: 400px;
     object-fit: cover;
@@ -57,16 +55,6 @@ h1#encabezado{
 }
 
 /*FILTROS*/
-nav > form >button#boton_busqueda{
-    
-    border-color: rgb(201, 45, 167);
-    color: rgb(201, 45, 167);
-}
-
-nav > form >button#boton_busqueda:hover{
-    background-color: rgb(255, 236, 244); 
-}
-
 main > div#div_filtros{
     background-color: rgb(255, 255, 255);
     justify-content: space-between;
@@ -98,63 +86,24 @@ section#section_cards{
     margin: 0 10%;
 }
 
-div#card_botones a{
-    color: rgb(201, 45, 167);
-    border-color: rgb(201, 45, 167) ;
+div.card_botones a, button#boton,  button#boton_busqueda{
+    color: rgb(194, 92, 172);
+    border-color: #b86c88 ;
     font-weight: 600;
 }
 
-div#card_botones a:hover{
+div.card_botones a:hover, button#boton:hover, button#boton_busqueda:hover{
     color: rgb(255, 255, 255);
-    background-color: rgb(201, 45, 167) ;
+    background-color: #b86c88 ;
+    border-color: #b86c88 ;
     font-weight: 600;
 }
-
-/*FOOTER*/
-#footer{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background-color: rgb(233, 186, 203);;
-}
-
-#footer > div{
-    display: flex;
-    flex-direction: row;
-    gap: 20px;
-    padding: 10px 50px;
-}
-
-footer a{
-    display: inline-block;
-    border-radius: 0px;
-}
-
-footer a > img{
-    width: 40px;
-}
-
-header#header > nav#nav_heder{
-    justify-content: end;
-}
-
-/*CONTACT*/
-from#formulario_contact{
-    background-color: rgb(255, 255, 255);
-    justify-content: center;
-    padding: 50px 25%;
-    gap: 10px;
-}
-/*
-from#formulario_contact > input,from#formulario_contact > textarea,from#formulario_contact > label{
-    width: 80%;
-}*/
 
 /*STATS*/
 table{
     margin: 50px 10%;
 }
-table > thead > tr > th{
+tr.thead{
     background-color: rgb(255, 236, 244);
     color: rgb(112, 12, 116);
 }
@@ -189,6 +138,57 @@ img#card_details_img{
     object-fit: cover;
     object-position: left;
     width: 500px;
+}
+
+/*FOOTER*/
+.footer{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background-color: rgb(233, 186, 203);
+    font-weight: 500;
+    color: #b86c88;
+}
+
+.footer > div{
+    display: flex;
+    flex-direction: row;
+    gap: 20px;
+    padding: 10px 50px;
+}
+
+footer a{
+    display: inline-block;
+    border-radius: 0px;
+}
+
+footer a > img{
+    width: 30px;
+}
+
+header#header > nav#nav_heder{
+    justify-content: end;
+}
+
+#footer_details{
+    position: absolute;
+    width: 100%;
+    bottom: 0;
+}
+
+/*CONTACT*/
+form#formulario_contact{
+    background-color: rgb(255, 255, 255);
+    justify-content: center;
+    padding: 50px 25%;
+    gap: 10px;
+}
+
+@media (max-width: 1500px){
+    #footer_details{
+    position: static;
+
+    }
 }
 
 @media (max-width: 1300px){
@@ -257,6 +257,10 @@ img#card_details_img{
 
     div#card_details{
         padding: 30px;
+    }
+
+    h1#encabezado{
+        top: 350px;
     }
 }
 
