--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,16 @@ main > div#div_filtros label{
 }
 
 /*TARJETAS*/
+div.card{
+    width: 18rem;
+}
+
+#img_card{
+    height: 200px;
+    object-fit: cover;
+    object-position: center;
+}
+
 div.card_div_price_buton{
     align-items: center;
     justify-content: space-around;
