--- a/css/style.css
+++ b/css/style.css
@@ -74,6 +74,13 @@ main > div#div_filtros label{
 }
 
 /*TARJETAS*/
+#mensaje_eventos{
+    background-color: #f6eef1;
+    color: #b86c88 ;
+    padding: 110px 0;
+    margin: 5%;
+    margin-bottom: 10%;
+}
 div.card{
     width: 18rem;
 }
@@ -111,7 +118,7 @@ div.card_botones a:hover, button#boton:hover, button#boton_busqueda:hover{
 
 /*STATS*/
 table{
-    margin: 50px 10%;
+    margin: 62px 10%;
 }
 tr.thead{
     background-color: rgb(255, 236, 244);
@@ -142,12 +149,14 @@ div#card_details2{
     width: 100%;
     display: flex;
     flex-direction: row;
+    align-items: center;
 }
 
 img#card_details_img{
     object-fit: cover;
-    object-position: left;
+    object-position: center;
     width: 500px;
+    min-height: 400px;
 }
 
 /*FOOTER*/
@@ -180,7 +189,7 @@ header#header > nav#nav_heder{
     justify-content: end;
 }
 
-#footer_details{
+#footer_absolute{
     position: absolute;
     width: 100%;
     bottom: 0;
@@ -192,13 +201,6 @@ form#formulario_contact{
     justify-content: center;
     padding: 50px 25%;
     gap: 10px;
-}
-
-@media (max-width: 1500px){
-    #footer_details{
-    position: static;
-
-    }
 }
 
 @media (max-width: 1300px){
@@ -277,5 +279,16 @@ form#formulario_contact{
 @media (max-width: 1000px){
     from#formulario_contact {
         padding: 50px 10%;
+    }
+}
+
+@media (max-width: 800px){
+    #footer_absolute {
+        position: static;
+    }
+
+    main#main_details{
+        padding: 9% 8%;
+        margin: 5px;
     }
 }
