--- a/css/style.css
+++ b/css/style.css
@@ -1,17 +1,18 @@
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Asap&family=Roboto&display=swap');
-*{
+
+* {
     margin: 0;
     padding: 0;
 }
 
 /*HEADER*/
-body > header#header{
+body>header#header {
     align-items: end;
     justify-content: space-between;
     background-color: rgb(253, 210, 225);
 }
 
-header nav a{
+header nav a {
     font-family: 'Roboto', sans-serif;
     font-weight: 900;
     color: rgb(141, 31, 117);
@@ -24,26 +25,27 @@ header nav a{
     border-top-right-radius: 5px;
 }
 
-header nav a:hover{
+header nav a:hover {
     text-decoration: none;
     background-color: rgb(250, 185, 208);
     color: rgb(255, 255, 255);
-}    
+}
 
-img#logo{
+img#logo {
     width: 200px;
     padding-bottom: 20px;
 }
 
 /*MAIN*/
 /*SLIDER*/
-main > div#carouselExampleIndicators, main > div#carouselExampleIndicators img{
+main>div#carouselExampleIndicators,
+main>div#carouselExampleIndicators img {
     height: 400px;
     object-fit: cover;
     object-position: center;
 }
 
-h1#encabezado{
+h1#encabezado {
     width: 100%;
     background-color: rgba(0, 0, 0, 0.247);
     font-size: 80px;
@@ -55,104 +57,115 @@ h1#encabezado{
 }
 
 /*FILTROS*/
-main > div#div_filtros{
+main>div#div_filtros {
     background-color: rgb(255, 255, 255);
     justify-content: space-between;
     padding: 20px 100px;
 }
 
-main > div#div_filtros div{
+main>div#div_filtros div {
     padding: 0 10px;
 }
 
-input#input_search{
+input#input_search {
     width: 200px;
 }
 
-main > div#div_filtros label{
+main>div#div_filtros label {
     padding: 0 10px;
 }
 
 /*TARJETAS*/
-#mensaje_eventos{
+#mensaje_eventos {
     background-color: #f6eef1;
-    color: #b86c88 ;
+    color: #b86c88;
     padding: 110px 0;
     margin: 5%;
     margin-bottom: 10%;
 }
-div.card{
+
+div.card {
     width: 18rem;
 }
 
-#img_card{
+#img_card {
     height: 200px;
     object-fit: cover;
     object-position: center;
 }
 
-div.card_div_price_buton{
+div.card_div_price_buton {
     align-items: center;
     justify-content: space-around;
 }
 
-section#section_cards{
+section#section_cards {
     padding-bottom: 50px;
     flex-wrap: wrap;
     gap: 20px;
     margin: 0 10%;
 }
 
-div.card_botones a, button#boton,  button#boton_busqueda{
+div.card_botones a,
+button#boton,
+button#boton_busqueda {
     color: rgb(194, 92, 172);
-    border-color: #b86c88 ;
+    border-color: #b86c88;
     font-weight: 600;
 }
 
-div.card_botones a:hover, button#boton:hover, button#boton_busqueda:hover{
+div.card_botones a:hover,
+button#boton:hover,
+button#boton_busqueda:hover {
     color: rgb(255, 255, 255);
-    background-color: #b86c88 ;
-    border-color: #b86c88 ;
+    background-color: #b86c88;
+    border-color: #b86c88;
     font-weight: 600;
 }
 
 /*STATS*/
-table{
-    margin: 62px 10%;
+table {
+    margin: 62px 20%;
 }
-tr.thead{
+
+tr.thead {
     background-color: rgb(255, 236, 244);
     color: rgb(112, 12, 116);
 }
 
-table > tbody > tr.tabla_titulo > td{
+table>tbody>tr.tabla_titulo>td {
     font-weight: 500;
 }
 
-td, th{
+td,
+th {
     border: 1px solid rgb(112, 12, 116);
     padding: 5px 15px;
 }
 
+td {
+    text-align: left;
+}
+
 /*DETAILS*/
-main#main_details{
+main#main_details {
     padding: 9% 8%;
 }
 
-div#card_details{
+div#card_details {
     padding: 50px;
-    background-color: rgb(255, 236, 244) ;
+    background-color: rgb(255, 236, 244);
     border-radius: 10px;
 }
 
-div#card_details2{
+div#card_details2 {
     width: 100%;
     display: flex;
     flex-direction: row;
     align-items: center;
 }
 
-img#card_details_img{
+img#card_details_img {
     object-fit: cover;
     object-position: center;
     width: 500px;
@@ -160,7 +173,7 @@ img#card_details_img{
 }
 
 /*FOOTER*/
-.footer{
+.footer {
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -169,58 +182,62 @@ img#card_details_img{
     color: #b86c88;
 }
 
-.footer > div{
+.footer>div {
     display: flex;
     flex-direction: row;
     gap: 20px;
     padding: 10px 50px;
 }
 
-footer a{
+footer a {
     display: inline-block;
     border-radius: 0px;
 }
 
-footer a > img{
+footer a>img {
     width: 30px;
 }
 
-header#header > nav#nav_heder{
+header#header>nav#nav_heder {
     justify-content: end;
 }
 
-#footer_absolute{
+#footer_absolute {
     position: absolute;
     width: 100%;
     bottom: 0;
 }
 
 /*CONTACT*/
-form#formulario_contact{
+form#formulario_contact {
     background-color: rgb(255, 255, 255);
     justify-content: center;
     padding: 50px 25%;
     gap: 10px;
 }
 
-@media (max-width: 1300px){
-    main#main_details{
+@media (max-width: 1300px) {
+    main#main_details {
         padding: 5%;
     }
 
-    section#section_cards{
-    margin: 0;
-}
+    section#section_cards {
+        margin: 0;
+    }
+
+    table {
+        margin: 62px 10%;
+    }
 }
 
-@media (max-width: 1200px){
+@media (max-width: 1200px) {
 
-    body > header#header {
+    body>header#header {
         flex-direction: column;
         justify-content: center;
     }
 
-    header div.div_logo{
+    header div.div_logo {
         width: 100%;
         text-align: center;
     }
@@ -230,17 +247,17 @@ form#formulario_contact{
         padding-bottom: 5px;
     }
 
-    header#header > nav#nav_heder{
+    header#header>nav#nav_heder {
         justify-content: center;
     }
 
-    main > div#div_filtros {
+    main>div#div_filtros {
         flex-direction: column;
         justify-content: center;
         padding: 20px 0;
     }
 
-    div#div_filtros_div{
+    div#div_filtros_div {
         display: flex;
         justify-content: center;
         flex-wrap: wrap;
@@ -250,44 +267,44 @@ form#formulario_contact{
         width: auto;
     }
 
-    h1#encabezado{
+    h1#encabezado {
         top: 300px;
     }
 
-    table{
+    table {
         margin: 50px 5%;
     }
 
-    div#card_details2{
+    div#card_details2 {
         flex-direction: column;
     }
 
-    img#card_details_img{
+    img#card_details_img {
         width: 100%;
         height: 400px;
     }
 
-    div#card_details{
+    div#card_details {
         padding: 30px;
     }
 
-    h1#encabezado{
+    h1#encabezado {
         top: 350px;
     }
 }
 
-@media (max-width: 1000px){
+@media (max-width: 1000px) {
     from#formulario_contact {
         padding: 50px 10%;
     }
 }
 
-@media (max-width: 800px){
+@media (max-width: 800px) {
     #footer_absolute {
         position: static;
     }
 
-    main#main_details{
+    main#main_details {
         padding: 9% 8%;
         margin: 5px;
     }
